Error Mitigation/MagiCoder/Data/javax_xml_transform_sax/javax_xml_transform_saxOutputResult.txt
Sample: SAXResult_1
----------------------------------------------------------------
output:
./Data/javax_xml_transform_sax/javaFiles/SAXResult_1.java:16: error: MyContentHandler is not abstract and does not override abstract method skippedEntity(String) in ContentHandler
class MyContentHandler implements ContentHandler {
^
1 error


================================================================

Sample: SAXResult_2
----------------------------------------------------------------
output:
./Data/javax_xml_transform_sax/javaFiles/SAXResult_2.java:16: error: cannot find symbol
            handler.setLexicalHandler(new DefaultHandler());
                   ^
  symbol:   method setLexicalHandler(DefaultHandler)
  location: variable handler of type TransformerHandler
./Data/javax_xml_transform_sax/javaFiles/SAXResult_2.java:17: error: incompatible types: DefaultHandler cannot be converted to InputSource
            SAXSource source = new SAXSource(new DefaultHandler());
                                             ^
./Data/javax_xml_transform_sax/javaFiles/SAXResult_2.java:18: error: cannot find symbol
            handler.transform(source, null);
                   ^
  symbol:   method transform(SAXSource,<null>)
  location: variable handler of type TransformerHandler
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
3 errors


================================================================

